# FrogDisKonto

./: .gitignore  .pre-commit-config.yaml  README.md  draft.md  implementation-details.md  intents.md  mcp-client-implementation.md  problem.md  query_improvement.md  techJuryDocu.md
Animated Splash Screen/: README.md  index.html  package.json  vite.config.ts
Animated Splash Screen/src/: App.tsx  index.css
Animated Splash Screen/src/components/: SplashScreen.tsx
Chatbot Application/: index.html
Chatbot Application (1)/: README.md  package.json
Chatbot Application (1)/src/: App.tsx  index.css
Chatbot Application (1)/src/components/: ChatBot.tsx  ChatInput.tsx  ChatMessage.tsx
Chatbot Application (1)/src/icons/: BotIcon.tsx  ClockIcon.tsx  HeadphonesIcon.tsx  MicIcon.tsx  PlayIcon.tsx  SendIcon.tsx  UserIcon.tsx  VideoIcon.tsx  index.tsx
Chatbot Application (1)/src/styles/: globals.css
Chatbot Application/src/: index.css
Chatbot Application/src/components/: ChatBot.tsx  ChatInput.tsx  ChatMessage.tsx
Chatbot Application/src/imports/: Rectangle1.tsx
backend/: README.md  app.py  intents.json  main.py  mcp_client.py  model.py  pyproject.toml
frogdiskonto_frontend/: README.md  package-lock.json  package.json
frogdiskonto_frontend/src/: App.vue
frogdiskonto_frontend/src/assets/: main.css
frogdiskonto_frontend/src/components/: ChatBot.vue  ChatInput.vue  ChatMessage.vue  HelloWorld.vue  SplashScreen.vue
frogdiskonto_frontend/src/imports/: Rectangle1.vue
